# LearnTinyRenderer

./: README.md
01_Env_And_DrawLine/: CMakeLists.txt  main.cpp
01_Env_And_DrawLine/utils/: geometry.h  tgaimage.cpp  tgaimage.h
02_DrawTriangle/: CMakeLists.txt  main.cpp
02_DrawTriangle/utils/: basic_shape.cpp  basic_shape.h
03_ZBuffering/: CMakeLists.txt  build_win64.sh  main.cpp
03_ZBuffering/utils/: basic_shape.cpp  basic_shape.h  geometry.h  model.cpp  model.h  tgaimage.cpp  tgaimage.h
